ckad/network/server-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: test-server
  name: server-pod
  namespace: test-a
spec:
  containers:
  - image: nginx
    name: server-pod
    ports:
    - containerPort: 80
