ckad/network/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-service
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ingress-test
  type: ClusterIP
status:
  loadBalancer: {}
