ckad/network/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
spec:
  ports:
  - name: 8080-80
    port: 8080
    protocol: TCP
    targetPort: 80
    nodePort: 30080
  selector:
    app: service-server
  type: NodePort
status:
  loadBalancer: {}
