ckad/network/deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-a-default-deny-ingress
  namespace: test-a
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
